# django-cfg

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  MANIFEST.in  Makefile  PKG-INFO  README.md  TESTING.md  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py
django_sample/: .gitignore  README.md  cli.py  package.json  pnpm-lock.yaml  pyproject.toml
django_sample/api/: config.py  settings.py  urls.py
django_sample/api/environment/: __init__.py  config.dev.yaml  config.prod.yaml  config.test.yaml  loader.py
django_sample/apps/blog/: models.py
django_sample/apps/blog/migrations/: 0001_initial.py  0002_initial.py
django_sample/apps/core/management/commands/: populate_sample_data.py
django_sample/apps/profiles/: models.py
django_sample/apps/shop/: views.py
django_sample/apps/shop/migrations/: 0001_initial.py  0002_initial.py
django_sample/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
django_sample/apps/users/migrations/: 0001_initial.py
django_sample/db/: blog.sqlite3  db.sqlite3  default.sqlite3  shop.sqlite3
django_sample/devops/: README.md  config.py  manage.py
django_sample/docker/: .dockerignore  Dockerfile  README.md  docker-compose.nginx.yml  docker-compose.services.yml  docker-compose.yml  env.production
django_sample/docker/config/: api.unrealos.com.conf  nginx.conf
django_sample/docker/postgres/default/: init-db.sh
django_sample/docker/redis/default/: redis.conf
django_sample/docker/scripts/: entrypoint.sh
django_sample/openapi/archive/files/20250822_052234/: blog_metadata.json  users_metadata.json
django_sample/openapi/archive/files/20250822_052235/: shop_metadata.json
django_sample/openapi/archive/files/20250909_050851/: blog_metadata.json  cfg_accounts_metadata.json  cfg_leads_metadata.json  cfg_newsletter_metadata.json  cfg_support_metadata.json  shop_metadata.json
django_sample/openapi/clients/typescript/: index.ts
django_sample/openapi/clients/typescript/blog/: index.ts  package.json  sdk.gen.ts  types.gen.ts
django_sample/openapi/clients/typescript/cfg_accounts/: package.json  sdk.gen.ts  types.gen.ts
django_sample/openapi/clients/typescript/cfg_leads/: package.json  sdk.gen.ts  types.gen.ts
django_sample/openapi/clients/typescript/cfg_newsletter/: index.ts  package.json  sdk.gen.ts  types.gen.ts
django_sample/openapi/clients/typescript/cfg_support/: index.ts  package.json  sdk.gen.ts  types.gen.ts
django_sample/openapi/clients/typescript/shop/: index.ts  package.json  sdk.gen.ts  types.gen.ts
django_sample/openapi/clients/typescript/users/: index.ts  package.json  sdk.gen.ts  types.gen.ts
django_sample/openapi/schemas/: blog.yaml  cfg_accounts.yaml  cfg_leads.yaml  cfg_newsletter.yaml  cfg_support.yaml  shop.yaml  users.yaml
django_sample/templates/: home.html
examples/projects/django/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/projects/django/api/: asgi.py  config.py  config.sample.py  settings.py  urls.py
examples/projects/django/api/environment/: .env.example  config.dev.yaml  config.prod.yaml  config.test.yaml  loader.py
examples/projects/django/apps/: __init__.py
examples/projects/django/apps/crypto/: apps.py  tasks.py  urls.py
examples/projects/django/apps/profiles/: __init__.py  admin.py  apps.py  signals.py
examples/projects/django/apps/trading/: __init__.py  apps.py  models.py  signals.py  urls.py
examples/projects/django/core/: centrifugo_handlers.py
examples/projects/django/devops/: README.md  manage.py
examples/projects/django/openapi/schemas/: cfg.yaml  crypto.yaml  profiles.yaml  trading.yaml
examples/projects/django/opensdk/: COMPLIANCE_REPORT.md  README.md
examples/projects/django/opensdk/go/: README.md  client.go  go.mod  rpc_client.go  types.go
examples/projects/django/opensdk/python/: README.md  __init__.py  client.py  models.py  requirements.txt  rpc_client.py
examples/projects/django/opensdk/typescript/: README.md  client.ts  package.json  rpc-client.ts  tsconfig.json  types.ts
examples/projects/django/scripts/test_tasks/: test_with_external_workers.sh
examples/projects/websocket/: .dockerignore  .env.example  Makefile  README.md  pyproject.toml  pytest.ini  test_ai_consumer.py
examples/projects/websocket/clients/python/: .editorconfig  .gitignore  README.md  __init__.py  client.py  models.py  pyproject.toml  setup.py
examples/projects/websocket/clients/typescript/: .editorconfig  .eslintrc.json  .gitignore  README.md  client.ts  index.ts  package.json  tsconfig.json
examples/projects/websocket/config/: __init__.py  rpc_config.py
examples/projects/websocket/src/: generate_client.py  main.py
examples/projects/websocket/src/consumers/: README.md  __init__.py  ai_command_consumer.py  file_watcher_consumer.py
examples/projects/websocket/src/handlers/: __init__.py  django_rpc_handler.py  notification_handler.py  session_handler.py  workspace_handler.py
examples/projects/websocket/tests/: __init__.py  conftest.py
examples/projects/websocket/tests/infrastructure/: __init__.py  test_redis_streams.py
examples/projects/websocket/tests/integration/: __init__.py
examples/projects/websocket/tests/unit/: __init__.py  test_file_watcher_models.py  test_session_models.py
examples/sample/django/: cli.py  package.json  pyproject.toml
examples/sample/django/api/: config.py  urls.py
examples/sample/django/api/environment/: .gitignore  __init__.py  config.dev.yaml  config.prod.yaml  loader.py
examples/sample/django/apps/blog/: serializers.py
examples/sample/django/apps/shop/: admin.py  urls.py
solution/projects/django/: .gitignore  CLAUDE.md  Makefile  generation.py  pyproject.toml  requirements-fallback.txt
solution/projects/django/@rules/: DJANGO_ASYNC_COMPLETE.md
solution/projects/django/api/: config.py  urls.py
solution/projects/django/core/: apps.py
solution/projects/django/extensions/: README.md  __init__.py
solution/projects/django/streamlit/: extensions.py
solution/projects/django/templates/: home.html
(+4467 files in other folders)
