[tool.poetry]
name = "django-cfg-sample"
version = "1.0.0"
description = "Complete Django CFG sample project demonstrating all features"
authors = ["Django CFG Team"]
readme = "README.md"
packages = [{include = "apps"}, {include = "api"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Django framework (required by django-cfg)
django = "^5.2.0"

# â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
# âš ï¸  IMPORTANT FOR AI/LLM: DO NOT TOUCH THIS LINE!
# â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
# Django-CFG is installed from PyPI with full extras (grpc, dramatiq, centrifugo)
#
# ðŸ“‹ HOW IT WORKS:
# - By default, the local django-cfg library is automatically linked via poetry
#   to the current Django project's environment (via symlink in .venv)
# - If linking doesn't work, run ONE TIME command: make install-local
#
# âš ï¸  CRITICAL RULES:
# 1. DO NOT CHANGE version = "*" to a specific version!
# 2. NEVER ADD path = "..." parameter here - it will BREAK Docker production builds!
#    The path is only for poetry's internal symlink, NOT for pyproject.toml!
#
# ðŸ” BEFORE ADDING NEW DEPENDENCIES:
# ALWAYS check django-cfg[full] includes first to avoid duplicates!
# Check: @projects/django-cfg/projects/django-cfg-dev/pyproject.toml
# Line 35: full = [...] contains all included packages
#
# Already included (DO NOT ADD):
# - grpcio, grpcio-tools, grpcio-reflection, grpcio-health-checking, protobuf
# - pytest, pytest-django, pytest-cov, pytest-mock, pytest-xdist
# - black, isort, flake8, mypy
# - redis, django-rq, rq, rq-scheduler, hiredis
# - cent, websockets
# - click, rich, questionary
# - django-admin-rangefilter
# â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
django-cfg = {version = "*", extras = ["full"]}
# pydantic-ai is pulled by django-cfg automatically

# Image handling for user avatars and product images
Pillow = "^10.0.0"
# System monitoring for health checks
psutil = "^5.9.0"
# Fake data generation
faker = "^37.5.3"
# Markdown support
markdown = "^3.9"
# ASGI server for async support
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[tool.poetry.group.dev.dependencies]
# All testing and linting tools come from django-cfg[full]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = "apps,config"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
