[project]
name = "django-cfg-sample"
version = "1.0.0"
description = "Complete Django CFG sample project demonstrating all features"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Django framework (required by django-cfg)
    "django>=5.2.0,<6.0",

    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    # IMPORTANT FOR AI/LLM: DO NOT TOUCH THIS LINE!
    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    # Django-CFG is installed from PyPI with full extras (grpc, dramatiq, centrifugo)
    #
    # HOW IT WORKS:
    # - By default, django-cfg is installed from PyPI via `uv sync`
    # - For local development, run: make install-local
    #   This uses `uv pip install -e ~/djangocfg[full]` to override with local editable
    # - Symlink ~/djangocfg is created via `make setup-alias` in root Makefile
    #
    # CRITICAL RULES:
    # 1. DO NOT CHANGE django-cfg[full] to a specific version!
    # 2. NEVER ADD path = "..." here - it will BREAK Docker production builds!
    #
    # BEFORE ADDING NEW DEPENDENCIES:
    # ALWAYS check django-cfg[full] includes first to avoid duplicates!
    # Check: @projects/django-cfg/projects/django-cfg/pyproject.toml
    # Line 35: full = [...] contains all included packages
    #
    # Already included (DO NOT ADD):
    # - grpcio, grpcio-tools, grpcio-reflection, grpcio-health-checking, protobuf
    # - pytest, pytest-django, pytest-cov, pytest-mock, pytest-xdist
    # - black, isort, flake8, mypy
    # - redis, django-rq, rq, rq-scheduler, hiredis
    # - cent, websockets
    # - click, rich, questionary
    # - django-admin-rangefilter
    # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    "django-cfg[full]",
    # pydantic-ai is pulled by django-cfg automatically

    # Image handling for user avatars and product images
    "Pillow>=10.0.0,<11.0",
    # Fake data generation
    "faker>=37.5.3,<38.0",
    # Markdown support
    "markdown>=3.9,<4.0",
    # ASGI server for async support
    "uvicorn[standard]>=0.34.0,<1.0",
]

[[project.authors]]
name = "Django CFG Team"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "api"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = "apps,config"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.uv.sources]
django-cfg = { path = "/Users/markinmatrix/djangocfg", editable = true }

